--- a/Covid19_Vaccines_Effectiveness_Final.ipynb
+++ b/Covid19_Vaccines_Effectiveness_Final.ipynb
@@ -1171,7 +1171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# codes to pull Australia data from World Bank API and then merge with Poland dataframe\n",
+    "# codes to pull Australia data from World Bank API and then merge with australia dataframe\n",
     "# Accessing the WorldBank API for GDP\n",
     "url = \"http://api.worldbank.org/v2/country/\"\n",
     "country_code = \"SD\"\n",
@@ -1688,7 +1688,7 @@
     }
    ],
    "source": [
-    "# codes to pull Sudan data from World Bank API and then merge with Poland dataframe\n",
+    "# codes to pull Sudan data from World Bank API and then merge with Sudan dataframe\n",
     "country = ['Sudan']  # Note the use of square brackets to define a list\n",
     "\n",
     "Sudan_grouped_cm_data = process_covid19_sum_data(covid19_data, country)\n",
