--- a/Covid19_Vaccines_Effectiveness_Final.ipynb
+++ b/Covid19_Vaccines_Effectiveness_Final.ipynb
@@ -1171,7 +1171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# codes to pull Australia data from World Bank API and then merge with australia dataframe\n",
+    "# codes to pull Australia data from World Bank API and then merge with Australia dataframe\n",
     "# Accessing the WorldBank API for GDP\n",
     "url = \"http://api.worldbank.org/v2/country/\"\n",
     "country_code = \"SD\"\n",
