--- a/Covid19_Vaccines_Effectiveness_Final.ipynb
+++ b/Covid19_Vaccines_Effectiveness_Final.ipynb
@@ -2008,6 +2008,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prepare the dataframes\n",
     "Australia_data = covid19_data[covid19_data['Location'] == 'Australia']\n",
     "Israel_data = covid19_data[covid19_data['Location'] == 'Israel']\n",
     "Sweden_data = covid19_data[covid19_data['Location'] == 'Sweden']"
@@ -2198,6 +2199,7 @@
     }
    ],
    "source": [
+    "# Make copies of the dataframes\n",
     "df1 = Sudan_grouped_cm_data.copy()\n",
     "df2 = Poland_grouped_cm_data.copy()\n",
     "df3 = Australia_grouped_cm_data.copy()\n",
