--- a/Covid19_Vaccines_Effectiveness_Final.ipynb
+++ b/Covid19_Vaccines_Effectiveness_Final.ipynb
@@ -1853,7 +1853,7 @@
     "    # Apply filter for rows where 'location' is in the list_of_countries\n",
     "    filtered_covid19_data = covid19_data[covid19_data['Location'].isin(country)]\n",
     "    \n",
-    "    # Group by 'date' column and aggregate the specified columns\n",
+    "    # Group by 'Date' column and aggregate the specified columns\n",
     "    grouped = filtered_covid19_data.groupby(filtered_covid19_data['Date'].dt.strftime('%Y-%m')).agg({\n",
     "        'Total_Cases': 'sum',\n",
     "        'New_Cases': 'sum',\n",
@@ -1900,13 +1900,13 @@
     "# Create a figure and axis object\n",
     "fig, ax1 = plt.subplots(figsize=(12, 6))\n",
     "\n",
-    "# Plot 'newCases' on the left y-axis\n",
+    "# Plot 'New_Cases' on the left y-axis\n",
     "ax1.plot(df1['Date'], df1['New_Cases'], label='New Cases', color='b', marker='o', linestyle='-')\n",
     "ax1.set_xlabel('Date')\n",
     "ax1.set_ylabel('New Cases', color='b')\n",
     "ax1.tick_params(axis='y', labelcolor='b')\n",
     "\n",
-    "# Create a second y-axis on the right side for 'newDeaths'\n",
+    "# Create a second y-axis on the right side for 'New_Deaths'\n",
     "ax2 = ax1.twinx()\n",
     "ax2.plot(df1['Date'], df1['New_Deaths'], label='New Deaths', color='r', marker='x', linestyle='--')\n",
     "ax2.set_ylabel('New Deaths', color='r')\n",
@@ -2521,12 +2521,11 @@
     }
    ],
    "source": [
-    "# Copy the DataFrame\n",
+    "# Make copies of the DataFrames\n",
     "df1 = Australia_grouped_gp2_data.copy()\n",
     "df2 = China_grouped_gp2_data.copy()\n",
     "df3 = Israel_grouped_gp2_data.copy()\n",
     "\n",
-    "# Assuming you have DataFrames named df1, df2, and df3\n",
     "# Convert the 'Date' column to datetime if it's not already in datetime format\n",
     "df1['Date'] = pd.to_datetime(df1['Date'], format='%Y-%m')\n",
     "df2['Date'] = pd.to_datetime(df2['Date'], format='%Y-%m')\n",
@@ -2538,7 +2537,7 @@
     "# List of DataFrames\n",
     "dfs = [df1, df2, df3]\n",
     "\n",
-    "# Plot 'newCases' and 'newDeaths' for each country on separate subplots\n",
+    "# Plot 'New_Cases' and 'New_Deaths' for each country on separate subplots\n",
     "countries = ['Australia', 'China', 'Israel']\n",
     "colors1 = ['b', 'b', 'b']\n",
     "colors2 = ['r', 'r', 'r']\n",
